TAG: homologyload-tr11886-2
DATE: 12/24/2014
STAFF: sc
CHANGES: 
1) preprocessHGNC.py - removed cluster function (factored out in last tag)
    also create list of list to pass to clusterizer rather than file
2) clusterize.py - take list of list as parameter rather than file

TAG: homologyload-tr11886-1
DATE: 12/24/2014
STAFF: sc
CHANGES: Initial tag with
1) preprocessHGNC.py/sh - renamed from runHGNCQC.py/sh
2) new clusterer.py
3) config for hgnc
4) Install - hgnc added

TAG: homologyload-tr11886-BP
DATE: 12/22/2014
STAFF: sc
CHANGES: TR11886 - M&M

TAG: homologyload-5-1-9-1
DATE: 7/31/2014
STAFF: dbm
CHANGES: TR11662
1) homologyload.config.default: Added taxon ID 8364 for Xenopus

TAG: homologyload-5-1-7-1
DATE: 01/28/2014
STAFF: lec
CHANGES:
1) TR11584/media wiki change

TAG: homologyload-5-1-4-1
DATE: 06/27/2013
STAFF: dbm
RELEASE:
CHANGES: index.html - removed 'scrum-bob'

TAG: homologyload-5-1-3-1
DATE: 04/16/2013
STAFF: dbm
RELEASE:
CHANGES: N2MO release tag

TAG: mrkcoordload-5-1-1-5
TAG: mrkcoordload-5-1-1-4
DATE: 01/14/2013
STAFF: sc
RELEASE: dev
CHANGES: US 62 Complete & document the homologene load
1) runQC.py - a bit of code reorg and additional commenting
2) homologyload.sh
a) moved setting of HOMOLOGY_VERSION to homologyload.py to use pythons 
   date string formatting
b) improved commenting
3) homologyload.py
a) set HOMOLOGY_VERSION 
b) improved commenting
4) added index.html

TAG: mrkcoordload-5-1-1-3
DATE: 12/20/2012
STAFF: sc
RELEASE: dev
CHANGES: 
1) added org/sym sorting
2) fixed bug in checkColumns

TAG: mrkcoordload-5-1-1-2
TAG: mrkcoordload-5-1-1-1
DATE: 12/19/2012
STAFF: sc
RELEASE: dev
CHANGES: N2MO initial tag
